--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "react-storybook",
   "version": "1.0.0",
   "main": "dist/index.js",
+  "eslintConfig": {
+    "env": {
+        "browser": true,
+        "node": true
+    }
+  },
   "repository": "https://github.com/daniel-silva-dxp/react-storybook.git",
   "author": "Daniel Silva <danielsilvadxp@gmail.com> (https://danielsilva-front.netlify.app/)",
   "license": "MIT",
